2011-01-05 Hannes Loeffler <hal@hloeffler.info>

  * edict-fpw2.6.1
  * reordered <sense> output to have <gloss> first, also check if <gloss>
    does actually exist
  * added <dial>

2011-01-04 Hannes Loeffler <hal@hloeffler.info>

  * edict-fpw2.6.0
  * output ent_seq in warning messages

2010-12-20 Hannes Loeffler <hal@hloeffler.info>

  * some changes in the Makefile

2010-11-27 Hannes Loeffler <hal@hloeffler.info>

  * fixed language checking in cnvdic

2010-11-26 Hannes Loeffler <hal@hloeffler.info>

  * edict-fpw2.5.6
  * unified key processing in register()
  * added warning routine

2010-11-25 Hannes Loeffler <hal@hloeffler.info>

  * edict-fpw2.5.6
  * call register() with only on set of keys

2010-11-24 Hannes Loeffler <hal@hloeffler.info>

  * edict-fpw2.5.5
  * better(?) check for JIS X 0213
  * weed out some more characters the backend won't accept: need more
    robust code!
  * some minor bugs

2008-11-28 Hannes Loeffler <hal@hloeffler.info>

  * edict-fpw2.5.4
  * added distrib and distrib-ebzip targets to Makefile

2008-11-27 Hannes Loeffler <hal@hloeffler.info>

  * edict-fpw2.5.3
  * added install2 target to Makefile, some cleanup
  * changes to menu

2008-11-24 Hannes Loeffler <hal@hloeffler.info>

  * edict-fpw2.5.2
  * some cleanup, removal of unneeded code

2008-11-21 Hannes Loeffler <hal@hloeffler.info>

  * edict-fpw2.5.1
  * few changes and minor bugfices in Makefile

2008-11-21 Hannes Loeffler <hal@hloeffler.info>

  * edict-fpw2.5.0
  * g_lang attribute changed to xml:lang according to Rev 1.07 of JMdict
  * added support for norwegian
  * new pseudo search keys '_menu' and '_version'
  * dictionary update to version from 2008-11-21

2007-03-05 Hannes Loeffler <hal@hloeffler.info>

  * minor changes

2007-03-01 Hannes Loeffler <hal@hloeffler.info>

  * edict-fpw2.4.0
  * added <stagk>, <stagk>, <field>, <s_inf>
  * some small changes and bug fixes

2007-02-27 Hannes Loeffler <hal@hloeffler.info>

  * edict-fpw2.3.3